<resources>
    <string name="app_name">Label</string>
    <string name="add_to_basket_caps">ADD TO BASKET</string>
    <string name="description">Description</string>
    <string name="about">About</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="view">View</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="support">Support</string>
    <string name="filter">Filter</string>
    <string name="cart">Cart</string>
    <string name="total">Total</string>
    <string name="subtotal_cart">Subtotal:</string>
    <string name="subtotal">Subtotal</string>
    <string name="checkout_caps">CHECKOUT</string>
    <string name="address_line">Address Line</string>
    <string name="use_shipping_address_caps">USE SHIPPING ADDRESS</string>
    <string name="save_address">Save Address</string>
    <string name="country">Country</string>
    <string name="postcode">Postcode</string>
    <string name="county">County</string>
    <string name="city">City</string>
    <string name="categories">Categories</string>
    <string name="menu">Menu</string>
    <string name="view_basket_caps">VIEW BASKET</string>
    <string name="orders_caps">ORDERS</string>
    <string name="about_caps">ABOUT</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="remember_details">Remember Details</string>
    <string name="continue_to_payment_caps">CONTINUE TO PAYMENT</string>
    <string name="success">Success</string>
    <string name="order_placed_caps">ORDER PLACED</string>
    <string name="back_caps">BACK</string>
    <string name="orders">Orders</string>
    <string name="search">Search</string>
    <string name="search_caps">SEARCH</string>
    <string name="ships_to_">Ships to:</string>
    <string name="cart_total">Cart Total</string>
    <string name="choose">Choose</string>
    <string name="select_shipping">Select Shipping</string>
    <string name="welcome_back_">Welcome Back!</string>
    <string name="sign_in_with">Sign In with:</string>
    <string name="or">Or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="welcome">Welcome</string>
    <string name="login_signup_to_continue">Login/Signup to continue, it\'s free to get started.</string>
    <string name="create_an_account_today">Create an account today!</string>
    <string name="sign_up">Sign up</string>
    <string name="terms_privacy">Terms &amp; Privacy</string>
    <string name="account">Account</string>
    <string name="welcome_aboard">Welcome Aboard!</string>
    <string name="next">Next</string>
    <string name="welcome_to">Welcome to %1$s</string>
    <string name="on_board_info">You\'re now registered, access your account to make purchases and changes to your profile.</string>
    <string name="button_continue">Continue</string>
    <string name="select_a_payment_method">Select a payment method</string>
    <string name="change">Change</string>
    <string name="cvc">CVC</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="oops_something_went_wrong">Oops, something went wrong, please try again</string>
    <string name="please_check_the_card_name">Please check the card name</string>
    <string name="please_check_the_card_number">Please check the card number</string>
    <string name="please_check_the_card">Please check the card</string>
    <string name="please_check_the_card_month_year">Please check the card month/year</string>
    <string name="error_with_payment_please_contact_support">Error with payment, please contact support!</string>
    <string name="select">Select</string>
    <string name="pay">Pay</string>
    <string name="processing">Processing</string>
    <string name="shipping_not_set_selected">Shipping: Not set selected</string>
    <string name="vat">VAT</string>
    <string name="about_version">Version: %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="address_line_field">address line field</string>
    <string name="city_field">city field</string>
    <string name="county_field">county_field</string>
    <string name="country_field">country field</string>
    <string name="postcode_field">postcode field</string>
    <string name="oops_please_check_the__before_continuing">Oops! Please check the %1$s before continuing.</string>
    <string name="sort">Sort</string>
    <string name="low_to_high">Low to High</string>
    <string name="high_to_low">High to Low</string>
    <string name="search_prod">Search: %1$s</string>
    <string name="total_with">Total: %1$s</string>
    <string name="basket_empty">Basket empty&#8230;</string>
    <string name="no_previous_orders_found">No previous orders found&#8230;</string>
    <string name="you_cannot_advance_with_an_empty_basket">You cannot advance with an empty basket&#8230;</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="please_check_the_first_name_field">Please check the first name field</string>
    <string name="please_check_the_last_name_field">Please check the last name field</string>
    <string name="please_check_the_email_field">Please check the email field</string>
    <string name="please_check_the_shipping_address">Please check the a shipping address</string>
    <string name="oops__to_continue">Oops!  %1$s to continue.</string>
    <string name="please_select_a_payment_method_to_continue">Please select a payment method to continue.</string>
    <string name="please_select_a_shipping_method_to_continue">Please select a shipping method to continue.</string>
    <string name="payment_to">Payment to %1$s</string>
    <string name="order_ref__">Order Ref #%1$s</string>
    <string name="sorry_this_item_is_out_of_stock">Sorry, this item is out of stock</string>
    <string name="added_to_basket">Added to basket</string>
    <string name="oops_no_attributes_found_for_this_product">Oops! No attributes found for this product</string>
    <string name="please_add_a__">Please add a %1$s</string>
    <string name="select__">Select %1$s</string>
    <string name="invalid_details">Invalid details</string>
    <string name="subtotal__">Subtotal: %1$s</string>
    <string name="vat__">tax: %1$s</string>
    <string name="shipping__">Shipping: %1$s</string>
    <string name="payment_not_accepted_please_try_again">Payment not accepted, please try again.</string>
    <string name="payment_failed">Payment failed</string>
</resources>
